--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-ECHO est† ativado.
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Curso de Git e Github</title>
+</head>
+<body>
+	<h2>Miha p√°gina inicial</h2>
+</body>
+</html>
